2001-03-17  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m-antenna.el: Changed antenna database format.
	(w3m-antenna-site-key, w3m-antenna-site-title,
	w3m-antenna-site-class, w3m-antenna-site-url,
	w3m-antenna-site-last-modified, w3m-antenna-site-size,
	w3m-antenna-site-size-detected): New macros.
	(w3m-antenna-setup): Follow change of database format.
	(w3m-antenna-check-sites): New function.
	(w3m-antenna-make-summary, w3m-antenna-sort-sites-by-time,
	w3m-antenna-sort-sites-by-title): Use macros to refer database.
	(w3m-about-antenna): Use w3m-antenna-check-sites.

	* w3m.el (w3m-about-history): Don't print "about://antenna/".

2001-03-17  Yuuichi Teranishi  <teranisi@gohome.org>

	* icons/antenna-up.xpm: New file.

	* w3m.el (w3m-toolbar-buttons): Added "antenna".
	(w3m-toolbar): Ditto;
	Fixed behavior of `home'.

2001-03-16  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el, w3m-antenna.el: Fix typo.

2001-03-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-make-package): Remove autoloads and cus-load
	files before generating.

	* w3m.el (w3m): Added autoload cookie.
	(w3m-icon-directory): Attempt to set the default value using the
	way of Wanderlust.

2001-03-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* README: Update for `install-package' and `install-icons'.
	* README.ja: Ditto.

	* w3mhack.el (w3mhack-make-package): New function.
	(w3mhack-examine-modules): Ignore auto-save files.

	* mkinstalldirs: New file.

	* configure.in: Call `AC_PATH_PACKAGEDIR'.

	* aclocal.m4 (AC_PATH_PACKAGEDIR): New function.
	(AC_EXAMINE_PACKAGEDIR): New function.
	(AC_CHECK_EMACS_FLAVOR): Merged into `AC_CHECK_EMACS'.

	* Makefile.in (install-package): New rule.
	(install-icons, install): Exec mkinstalldirs.
	(SHELL, PACKAGEDIR): New variable.

2001-03-16  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-goto-url): Force switch to '*w3m*' buffer.
	(w3m-view-source): Don't add current-url to w3m-url-history|yrotsih.
